--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -24,8 +24,10 @@
 
 
   <androidx.recyclerview.widget.RecyclerView
-      android:layout_width=""
-      android:layout_height=""/>
+      android:id="@+id/recyclerView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="10dp"/>
 
 
 
