--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -25,7 +25,7 @@
         android:id="@+id/editBookName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Book Name"
+        android:hint="Enter Book Name"
         android:textSize="18sp"
         android:layout_margin="10dp"
         android:textColor="#000000" />
@@ -34,7 +34,7 @@
         android:id="@+id/editBookAuthor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Author Name"
+        android:hint="Enter Author Name"
         android:textSize="18sp"
         android:layout_margin="10dp"
         android:textColor="#000000"
@@ -44,7 +44,7 @@
         android:id="@+id/editBookPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Book Price"
+        android:hint="Enter Book Price"
         android:textSize="18sp"
         android:layout_margin="10dp"
         android:textColor="#000000"
